<resources>
    <string name="app_name">LoginWithAnimation</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Punya keluh kesah sebagai developer yang submission nya ga kelar kelar? Ceritakuen hadir sebagai solusi</string>
    <string name="title_welcome_page">Selamat datang di CeritaKeun!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk menjelajahi cerita?</string>
    <string name="name">Nama</string>
    <string name="logout">Logout</string>
    <string name="title_story">Title</string>
    <string name="desc_story">Description\n</string>
    <string name="todo">TODO</string>
    <string name="login_success">Login Berhasil</string>
    <string name="camera_button_text">Open Camera</string>
    <string name="gallery_button_text">Choose from Gallery</string>
    <string name="upload_button_text">Upload Story</string>
    <string name="actionbar_upload_story">Upload Story</string>
    <string name="upload_error">Gagal mengupload\n</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="empty_text">Empty</string>
    <string name="search">Search</string>
    <string name="title_activity_story_maps_location">StoryMapsLocationActivity</string>
    <string name="yes">Yakin\n</string>
    <string name="confirm_upload_message">Yakin pingin upload?</string>
    <string name="confirm_upload_title">Upload Story</string>
    <string name="description_empty">Isi dulu deskripsinya :)</string>
    <string name="cancel">Batal</string>
    <string name="permission_required">Aplikasi belum mendapatkan izin</string>
    <string name="getting_worldwide_stories">Mencari Cerita....</string>
    <string name="successfully_get_worldwide_stories">Berhasil mendapatkan cerita</string>
    <string name="style_parsing_failed">Parsing failed</string>
    <string name="cannot_find_style_map">cannot find style map</string>
    <string name="viewing_story">Menampilkan cerita dari %1$s</string>
    <string name="send_loc">Kirimkan lokasi</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="try_again">Coba lagi</string>
</resources>